# gdisdl

./: .gitmodules  CMakeLists.txt
test/: smoke.cpp
